@@ -23,6 +23,9 @@ class Dummy(Explicit):
 
     implements(ITranslatable)
 
+    def getTranslation(self, language='language'):
+        return self.getTranslations().get(language, None)
+
     def getTranslations(self, review_state=False):
         return {'en': self, 'nl': self}
 
@@ -214,7 +217,7 @@ class TestLanguageSelectorBasics(cleanup.CleanUp, TestCase):
             {'code': 'no',
              'translated': False,
              'selected': False,
-             'url': base + 'pres%C3%98rved&set_language=no'}]
+             'url': 'object_url?set_language=no'}]
         self.assertEqual(self.selector.languages(), expected)
 
     def test_languages_preserve_view_and_query(self):
@@ -235,7 +238,7 @@ class TestLanguageSelectorBasics(cleanup.CleanUp, TestCase):
             {'code': 'no',
              'translated': False,
              'selected': False,
-             'url': base + 'no'}]
+             'url': 'object_url?int=1&uni=pres%C3%98rved&set_language=no'}]
         self.assertEqual(self.selector.languages(), expected)
 
 
@@ -250,7 +253,7 @@ class TestLanguageSelectorRendering(LinguaPloneTestCase):
         self.german = makeTranslation(self.english, 'de')
         self.german.setLanguage('de')
 
-    def testRenderSelector(self):
+    def testRenderSelectorOnContent(self):
         request = self.app.REQUEST
         selector = TranslatableLanguageSelector(
             self.english, request, None, None)
@@ -261,6 +264,24 @@ class TestLanguageSelectorRendering(LinguaPloneTestCase):
         en_link = '<a href="%s?set_language=en"' % en_path
         self.assert_(en_link in output)
         de_path = self.german.absolute_url()
+        de_link = '<a href="%s?set_language=de"' % de_path
+        self.assert_(de_link in output)
+        no_path = self.portal.absolute_url()
+        no_link = '<a href="%s?set_language=no"' % no_path
+        self.assert_(no_link in output)
+
+    def testRenderSelectorWithView(self):
+        request = self.app.REQUEST
+        request['PATH_INFO'] = '@@myview'
+        selector = TranslatableLanguageSelector(
+            self.english, request, None, None)
+        selector.update()
+        output = selector.render()
+        self.assert_('<ul id="portal-languageselector"' in output)
+        en_path = self.english.absolute_url() + '/@@myview'
+        en_link = '<a href="%s?set_language=en"' % en_path
+        self.assert_(en_link in output)
+        de_path = self.german.absolute_url() + '/@@myview'
         de_link = '<a href="%s?set_language=de"' % de_path
         self.assert_(de_link in output)
         no_path = self.portal.absolute_url()
