@@ -4,6 +4,10 @@ Changelog
 4.0.4 - unreleased
 ------------------
 
+- Fixed language selector for not translated contents.
+  Especially : avoid site error when url links to a specific template/view.
+  [thomasdesvenain]
+
 - translate_item form works when content has no 'default' fieldset.
   [thomasdesvenain]
 
